<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">My Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="today_weather">Today-Sunny-88/63</string>
    <string name="today">Today</string>
    <string name="date">June 24</string>
    <string name="weather">Sunny</string>
    <string name="max_temp">25ْ </string>
    <string name="min_temp">7ْ </string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="refresh_option_title">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_detial">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_unit_label">Temperature Units</string>
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_default">metric</string>
    <string name="pref_unit_metric_value">metric</string>
    <string name="pref_unit_imperial_value">imperial</string>
    <string name="pref_unit_metric_label">Metric</string>
    <string name="pref_unit_imperial_label">Imperial</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="sync_account_type">mysunshine.moaz</string>
    <string name="content_authority">moaz.mysunshine</string>

    <!-- Notification Format -->
<string name="format_notification">
Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    2.    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
