<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/today_touch_selector"
    >


    <LinearLayout
        android:layout_marginLeft="60dp"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_date_textview"
            android:text="@string/today"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_item_high_textview"
            android:text="@string/max_temp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="72sp"
            android:textColor="@color/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_item_low_textview"
            android:text="@string/min_temp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="36sp"
            android:textColor="@color/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_height="100dp"
            android:layout_width="100dp" />

        <TextView
            android:id="@+id/list_item_forecast_textview"
            android:text="@string/weather"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>